--- a/index.html
+++ b/index.html
@@ -6,97 +6,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- Jquery -->
-    <script src="./jquery.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-        integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="public/css/default.css">
+    <link rel="stylesheet" href="public/css/icons.css">
+    <link rel="stylesheet" href="public/css/tui-example-style.css">
+
+    <style>
+
+    </style>
 </head>
 
 <body>
-    <!-- font awesome CSS -->
-    <link rel="stylesheet" type="text/css" href="css/font.css">
-    <!-- font awesome JS -->
-    <script type="text/javascript" src="./js/font.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-        integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-        crossorigin="anonymous"></script>
-
-    <div id="lnb-calendars" class="lnb-calendars">
-        <div>
-            <div class="lnb-calendars-item">
-                <label>
-                    <input class="tui-full-calendar-checkbox-square" type="checkbox" value="all" checked="">
-                    <span></span>
-                    <strong>View all</strong>
-                </label>
-            </div>
-        </div>
-        <div id="calendarList" class="lnb-calendars-d1">
-            <div class="row">
-                <div class="lnb-calendars-item col-9"><label><input type="checkbox"
-                            class="tui-full-calendar-checkbox-round" value="1623730214990" checked=""><span
-                            style="border-color: purple; background-color: purple;"></span><span>ssd</span> </label>
-                </div>
-                <div class="col-3 py-2 delBtn" delid="1623730214990"><i class="fas fa-backspace" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="row">
-                <div class="lnb-calendars-item col-9"><label><input type="checkbox"
-                            class="tui-full-calendar-checkbox-round" value="1623730223744" checked=""><span
-                            style="border-color: blue; background-color: blue;"></span><span>hdd</span> </label></div>
-                <div class="col-3 py-2 delBtn" delid="1623730223744"><i class="fas fa-backspace" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="row">
-                <div class="lnb-calendars-item col-9"><label><input type="checkbox"
-                            class="tui-full-calendar-checkbox-round" value="1623730257108" checked=""><span
-                            style="border-color: gray; background-color: gray;"></span><span>cpu</span> </label></div>
-                <div class="col-3 py-2 delBtn" delid="1623730257108"><i class="fas fa-backspace" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="row">
-                <div class="lnb-calendars-item col-9"><label><input type="checkbox"
-                            class="tui-full-calendar-checkbox-round" value="1623730360366" checked=""><span
-                            style="border-color: red; background-color: red;"></span><span>gpu</span> </label></div>
-                <div class="col-3 py-2 delBtn" delid="1623730360366"><i class="fas fa-backspace" aria-hidden="true"></i>
-                </div>
-            </div>
-            <div class="row">
-                <div class="lnb-calendars-item col-9"><label><input type="checkbox"
-                            class="tui-full-calendar-checkbox-round" value="1623730755433" checked=""><span
-                            style="border-color: orange; background-color: orange;"></span><span>ram</span> </label>
-                </div>
-                <div class="col-3 py-2 delBtn" delid="1623730755433"><i class="fas fa-backspace" aria-hidden="true"></i>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="test">
-        adfdasf
-    </div>
-    <!-- <script src="main.js"></script> -->
-    <script src="test1.js"></script>
-    <script src="test2.js"></script>
+    <ul class='ultest'>
+        <li class="init" testId="adfssdfsdf">init</li>
+    </ul>
+    <ul class='ultest'>
+        <li class="init" testId="adfssdfsdf">init</li>
+    </ul>
+    <button class="createButton">123</button>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script>
-        test1()
-        async function test1(){
-
-            let a = await test()
+        $('.createButton').click(function() {
+            let a = $('.init').attr('testId')
             console.log(a);
-        }
-        async function test(){
-            let b;
-            $('.delBtn').click(function () {
-                // console.log(this.delId);
-                // console.log(this);
-                b = this
-                console.log(b);
-            })
-            return b
-        }
+        })
+        $('.ultest').append(
+            `
+                    <li getChooseOrderId="456">132
+                `
+        );
     </script>
 </body>
 
